<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.mtanalyze</groupId>
    <artifactId>mtanalyze</artifactId>
    <version>0.9.0</version>
    <packaging>jar</packaging>

    <name>MT Analyze</name>
    <url>https://mtanalyze.com</url>

    <organization>
        <name>Centerscout GmbH</name>
        <url>https://www.centerscout.de</url>
    </organization>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.prowidesoftware</groupId>
            <artifactId>pw-swift-core</artifactId>
            <version>SRU2025-10.3.14</version>
        </dependency>
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.7.1</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.mtanalyze.MtAnalyze</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>shade</goal></goals>
                        <configuration>
                            <finalName>MT-Analyze-${project.version}</finalName>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.mtanalyze.MtAnalyze</mainClass>
                                </transformer>
                                <!-- META-INF/services-Dateien korrekt zusammenführen -->
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                <!-- Doppelte Apache-License-Dateien korrekt zusammenführen -->
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer"/>
                            </transformers>
                            <!-- Signaturdateien entfernen (verhindert SecurityException) -->
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                        <exclude>META-INF/versions/*/module-info.class</exclude>
                                        <exclude>module-info.class</exclude>
                                    </excludes>
                                </filter>
                                <!-- Remove rogue Maven Plugin metadata bundled inside xmlbeans -->
                                <filter>
                                    <artifact>org.apache.xmlbeans:xmlbeans</artifact>
                                    <excludes>
                                        <exclude>META-INF/maven/**</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>de.thetaphi</groupId>
                <artifactId>forbiddenapis</artifactId>
                <version>3.10</version>
                <executions>
                    <execution>
                        <id>no-network-apis</id>
                        <goals><goal>check</goal></goals>
                        <configuration>
                            <signatures>
                                java.net.Socket @ No outbound network connections allowed
                                java.net.ServerSocket @ No outbound network connections allowed
                                java.net.URL#openConnection() @ No outbound network connections allowed
                                java.net.URL#openStream() @ No outbound network connections allowed
                                java.net.HttpURLConnection @ No outbound network connections allowed
                                java.net.http.HttpClient @ No outbound network connections allowed
                                java.net.http.HttpRequest @ No outbound network connections allowed
                            </signatures>
                            <failOnUnsupportedJava>false</failOnUnsupportedJava>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
